--- a/CurrencyConverter/Base.lproj/Main.storyboard
+++ b/CurrencyConverter/Base.lproj/Main.storyboard
@@ -72,6 +72,8 @@
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="EWw-iM-bYl"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="baseCountryButton" destination="J9x-5L-EM8" id="IQ8-5W-Pel"/>
+                        <outlet property="currencyTextField" destination="PWa-d9-DVs" id="4Z4-yc-TWS"/>
                         <outlet property="headerView" destination="CG4-2g-smP" id="gON-jn-7bd"/>
                         <outlet property="tableView" destination="XAH-7z-4HC" id="yhT-Tg-0XP"/>
                         <segue destination="NO2-sX-aRg" kind="show" identifier="detailed" id="weE-VJ-sct"/>
@@ -82,19 +84,22 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cad" translatesAutoresizingMaskIntoConstraints="NO" id="0V9-us-v7H">
-                            <rect key="frame" x="16" y="5" width="64" height="64"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="0V9-us-v7H" secondAttribute="height" multiplier="1:1" id="F68-hm-XRJ"/>
-                                <constraint firstAttribute="width" constant="64" id="vsv-Iv-fu2"/>
-                            </constraints>
-                        </imageView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="PWa-d9-DVs" userLabel="input Label">
-                            <rect key="frame" x="112" y="20.5" width="200" height="33"/>
+                            <rect key="frame" x="112" y="21" width="200" height="33"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="24"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9x-5L-EM8">
+                            <rect key="frame" x="16" y="5" width="64" height="64"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="64" id="nJs-En-fCI"/>
+                            </constraints>
+                            <state key="normal" image="cad"/>
+                            <connections>
+                                <segue destination="Yx3-Zy-XxK" kind="show" identifier="countrySelect" id="RKg-TW-uIC"/>
+                            </connections>
+                        </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vHg-hE-Aor">
                             <rect key="frame" x="88" y="22" width="16" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
@@ -107,20 +112,84 @@
                         <accessibilityTraits key="traits" header="YES"/>
                     </accessibility>
                     <constraints>
-                        <constraint firstItem="vHg-hE-Aor" firstAttribute="top" secondItem="v9B-EY-SVZ" secondAttribute="top" constant="22" id="1uY-Zc-PP0"/>
-                        <constraint firstItem="PWa-d9-DVs" firstAttribute="centerY" secondItem="vHg-hE-Aor" secondAttribute="centerY" id="D2J-mn-Qnt"/>
-                        <constraint firstItem="v9B-EY-SVZ" firstAttribute="bottom" secondItem="0V9-us-v7H" secondAttribute="bottom" constant="5" id="GiM-ea-cmh"/>
-                        <constraint firstItem="v9B-EY-SVZ" firstAttribute="bottom" secondItem="vHg-hE-Aor" secondAttribute="bottom" constant="22" id="XOH-0q-EOy"/>
-                        <constraint firstItem="PWa-d9-DVs" firstAttribute="leading" secondItem="vHg-hE-Aor" secondAttribute="trailing" constant="8" id="YrB-Y5-izy"/>
-                        <constraint firstItem="vHg-hE-Aor" firstAttribute="leading" secondItem="0V9-us-v7H" secondAttribute="trailing" constant="8" id="qw6-s0-gmf"/>
-                        <constraint firstItem="v9B-EY-SVZ" firstAttribute="trailing" secondItem="PWa-d9-DVs" secondAttribute="trailing" constant="8" id="sOW-CQ-TwX"/>
-                        <constraint firstItem="0V9-us-v7H" firstAttribute="leading" secondItem="v9B-EY-SVZ" secondAttribute="leading" constant="16" id="vPt-JH-GWz"/>
-                        <constraint firstItem="0V9-us-v7H" firstAttribute="top" secondItem="v9B-EY-SVZ" secondAttribute="top" constant="5" id="yZH-Da-ENa"/>
+                        <constraint firstItem="PWa-d9-DVs" firstAttribute="leading" secondItem="vHg-hE-Aor" secondAttribute="trailing" constant="8" id="BNy-up-gBq"/>
+                        <constraint firstItem="v9B-EY-SVZ" firstAttribute="bottom" secondItem="vHg-hE-Aor" secondAttribute="bottom" constant="22" id="KEI-LM-aIQ"/>
+                        <constraint firstItem="v9B-EY-SVZ" firstAttribute="bottom" secondItem="J9x-5L-EM8" secondAttribute="bottom" constant="5" id="OUn-bd-TG8"/>
+                        <constraint firstItem="J9x-5L-EM8" firstAttribute="top" secondItem="v9B-EY-SVZ" secondAttribute="top" constant="5" id="T1N-iA-8dV"/>
+                        <constraint firstItem="vHg-hE-Aor" firstAttribute="top" secondItem="v9B-EY-SVZ" secondAttribute="top" constant="22" id="WQg-qL-JYc"/>
+                        <constraint firstItem="PWa-d9-DVs" firstAttribute="leading" secondItem="vHg-hE-Aor" secondAttribute="trailing" constant="8" id="ZMd-FC-U7a"/>
+                        <constraint firstItem="PWa-d9-DVs" firstAttribute="top" secondItem="v9B-EY-SVZ" secondAttribute="top" constant="21" id="ZiL-t0-iGH"/>
+                        <constraint firstItem="vHg-hE-Aor" firstAttribute="leading" secondItem="J9x-5L-EM8" secondAttribute="trailing" constant="8" id="Zk3-Mv-JLQ"/>
+                        <constraint firstItem="J9x-5L-EM8" firstAttribute="leading" secondItem="v9B-EY-SVZ" secondAttribute="leading" constant="16" id="bNm-b8-jGx"/>
+                        <constraint firstItem="v9B-EY-SVZ" firstAttribute="bottom" secondItem="PWa-d9-DVs" secondAttribute="bottom" constant="20" id="hin-k2-s3q"/>
+                        <constraint firstItem="v9B-EY-SVZ" firstAttribute="trailing" secondItem="PWa-d9-DVs" secondAttribute="trailing" constant="8" id="oCn-E9-2oA"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="v9B-EY-SVZ"/>
                 </view>
             </objects>
             <point key="canvasLocation" x="2181.5999999999999" y="1607.9460269865069"/>
+        </scene>
+        <!--Country Selector Controller-->
+        <scene sceneID="uCZ-Rs-AxH">
+            <objects>
+                <viewController id="Yx3-Zy-XxK" customClass="CountrySelectorController" customModule="CurrencyConverter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ma0-os-2Ar">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BHN-sX-vyG">
+                                <rect key="frame" x="50" y="201.5" width="275" height="328"/>
+                                <subviews>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8PG-Hn-Vm1">
+                                        <rect key="frame" x="-22.5" y="38" width="320" height="252"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                    </pickerView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a base currency" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Diu-1T-Cvd">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="30"/>
+                                        <color key="backgroundColor" red="0.77562607510000003" green="0.83233071889999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shx-iF-xRP">
+                                        <rect key="frame" x="0.0" y="298" width="275" height="30"/>
+                                        <state key="normal" title="Done"/>
+                                        <connections>
+                                            <action selector="doneButton:" destination="Yx3-Zy-XxK" eventType="touchUpInside" id="pzh-rM-Nlh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="BHN-sX-vyG" secondAttribute="height" multiplier="275:328" id="7tQ-zn-tiK"/>
+                                    <constraint firstItem="shx-iF-xRP" firstAttribute="top" secondItem="8PG-Hn-Vm1" secondAttribute="bottom" constant="8" id="Dfa-J4-fJb"/>
+                                    <constraint firstItem="Diu-1T-Cvd" firstAttribute="leading" secondItem="BHN-sX-vyG" secondAttribute="leading" id="DsJ-gE-GOt"/>
+                                    <constraint firstAttribute="trailing" secondItem="Diu-1T-Cvd" secondAttribute="trailing" id="FwL-gW-xhG"/>
+                                    <constraint firstAttribute="trailing" secondItem="shx-iF-xRP" secondAttribute="trailing" id="Gnf-2f-4sK"/>
+                                    <constraint firstAttribute="height" constant="328" id="Kw7-YT-onO"/>
+                                    <constraint firstItem="8PG-Hn-Vm1" firstAttribute="centerX" secondItem="BHN-sX-vyG" secondAttribute="centerX" id="MFk-hW-aTQ"/>
+                                    <constraint firstItem="Diu-1T-Cvd" firstAttribute="top" secondItem="BHN-sX-vyG" secondAttribute="top" id="UR3-Tt-R0E"/>
+                                    <constraint firstItem="8PG-Hn-Vm1" firstAttribute="centerY" secondItem="BHN-sX-vyG" secondAttribute="centerY" id="cO5-cB-DAh"/>
+                                    <constraint firstItem="shx-iF-xRP" firstAttribute="leading" secondItem="BHN-sX-vyG" secondAttribute="leading" id="nqM-fx-4k0"/>
+                                    <constraint firstAttribute="bottom" secondItem="shx-iF-xRP" secondAttribute="bottom" id="q4O-Ht-lZm"/>
+                                    <constraint firstItem="8PG-Hn-Vm1" firstAttribute="top" secondItem="Diu-1T-Cvd" secondAttribute="bottom" constant="8" id="sIi-gc-c6n"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BHN-sX-vyG" firstAttribute="centerX" secondItem="MMA-cr-y6Z" secondAttribute="centerX" id="ibE-du-bhI"/>
+                            <constraint firstItem="BHN-sX-vyG" firstAttribute="centerY" secondItem="MMA-cr-y6Z" secondAttribute="centerY" id="ikM-AI-kGm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="MMA-cr-y6Z"/>
+                    </view>
+                    <connections>
+                        <outlet property="countryPicker" destination="8PG-Hn-Vm1" id="Zqs-fb-YKU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J8s-TF-uj1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2181.5999999999999" y="810.94452773613204"/>
         </scene>
         <!--Currency Information-->
         <scene sceneID="gSI-eb-wbh">
