--- a/CurrencyConverter/Base.lproj/Main.storyboard
+++ b/CurrencyConverter/Base.lproj/Main.storyboard
@@ -68,7 +68,11 @@
                         </prototypes>
                     </tableView>
                     <navigationItem key="navigationItem" id="eYs-5m-qdx">
-                        <barButtonItem key="leftBarButtonItem" title="Item" image="gear" id="0PI-Ag-ApR"/>
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="gear" id="0PI-Ag-ApR">
+                            <connections>
+                                <segue destination="rum-HT-pac" kind="show" id="PmX-39-KqL"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="EWw-iM-bYl"/>
                     </navigationItem>
                     <connections>
@@ -88,7 +92,10 @@
                             <rect key="frame" x="126" y="21" width="186" height="33"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done"/>
+                            <connections>
+                                <action selector="currecyEditingEnd:" destination="SRk-tX-YeQ" eventType="editingDidEnd" id="rbg-qY-2y6"/>
+                            </connections>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" background="CAD" translatesAutoresizingMaskIntoConstraints="NO" id="rsh-SW-COW">
                             <rect key="frame" x="16" y="0.0" width="78" height="74"/>
@@ -179,6 +186,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hzn-hl-VwW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3032.8000000000002" y="1607.9460269865069"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="t5C-qE-AuC">
+            <objects>
+                <viewController id="rum-HT-pac" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Aix-qt-s7z">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="SZq-il-TR1"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rS0-qA-Ig4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1242" y="821"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="yuS-PF-gdi">
